# lainbow

./: .env  .env.template  .gitignore  .pre-commit-config.yaml  README.md  debug_inference.py  docker-compose.api.yaml  docker-compose.batch.yaml  docker-compose.database.yaml  docker-compose.inference.yaml  down.sh  download_models.py  migrate_milvus_to_qdrant.py  pyproject.toml  requirements.txt  run_debug_inference.sh
docker/: api.Dockerfile  api_requirements.txt  batch.Dockerfile  batch_requirements.txt  inference.Dockerfile  inference.rocm.Dockerfile  inference_requirements.txt
src/api/: __init__.py  main.py  session_manager_wrap.py
src/api/core/: __init__.py  db_manager.py  text_embedding.py
src/api/v1/: api.py
src/api/v1/endpoints/: batch.py  songs.py  stats.py
src/domain/: __init__.py  config.py  inference_client.py  messages.py  milvus_utils.py  schemas.py  session_manager.py  task_manager.py  vector_store_utils.py
src/inference/: main.py
src/inference/core/: model_manager.py
src/inference/models/: base.py  clap_model.py  mert_model.py  muq_model.py  muq_mulan_model.py
src/inference/v1/endpoints/: inference.py
src/worker/: __init__.py  acoustic_features.py  audio.py  celery_app.py  clap.py  mert.py  muq.py  muq_mulan.py  tasks.py
tests/inference/: test_inference_core.py
tests/worker/: test_audio.py
